Minor changes/fixes

--- a/res/datasets/knowledge.json
+++ b/res/datasets/knowledge.json
@@ -3,7 +3,7 @@
       "name": {
         "en": "Doctor Seuss"
       },
-      "info": "A beloved author, who wrote and illustrated over 60 books during his career, including classics like The Cat in the Hat and Green Eggs and Ham. I was named after him.",
-      "opinion": "I love his stories!"
+      "info": "was a beloved author, who wrote and illustrated over 60 books during his career, including classics like The Cat in the Hat and Green Eggs and Ham. I was named after him.",
+      "opinion": "that he had many great stories, which we all love today."
     }
 ]
